Blender crash when pack uv islands #37472

Closed
opened 2013-11-15 13:52:46 +01:00 by brothermechanic · 10 comments

System Information
Operating system and graphics card
Gentoo ~amd64 gtx660m
Blender Version
Broken: Blender-last svn
Worked: Blender 2.69 release

Short description of error
Blender crash when pack uv islands (ctrl+p)
Exact steps for others to reproduce the error
pack.blend

**System Information** Operating system and graphics card Gentoo ~amd64 gtx660m **Blender Version** Broken: Blender-last svn Worked: Blender 2.69 release **Short description of error** Blender crash when pack uv islands (ctrl+p) **Exact steps for others to reproduce the error** [pack.blend](https://archive.blender.org/developer/F27565/pack.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @brothermechanic

Added subscriber: @brothermechanic
Martijn Berger changed title from Bledner crash when pack uv islands to Blender crash when pack uv islands 2013-11-16 10:08:24 +01:00
Member

Added subscriber: @MartijnBerger

Added subscriber: @MartijnBerger
Member

I can reproduce the bug.

(gdb) bt
  • 0 0x00007ffff3223f77 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
  • 1 0x00007ffff32275e8 in __GI_abort () at abort.c:90
  • 2 0x00007ffff32614fb in __libc_message (do_abort=do_abort@entry=2, fmt=fmt@entry=0x7ffff3375240 "Error in `%s': %s: 0x%s\n") at ../sysdeps/unix/sysv/linux/libc_fatal.c:199
  • 3 0x00007ffff326d996 in malloc_printerr (ptr=0x6e64500, str=0x7ffff33753e0 "free(): invalid next size (fast)", action=3) at malloc.c:4923
  • 4 _int_free (av=, p=0x6e644f0, have_lock=0) at malloc.c:3779
  • 5 0x000000000286920e in MEM_lockfree_freeN (vmemh=0x6e64508) at /home/mberger/src/blender/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:132
  • 6 0x0000000002659f6f in BLI_convexhull_aabb_fit_points_2d (points=0x6c1f3a8, n=4) at /home/mberger/src/blender/blender/source/blender/blenlib/intern/convexhull2d.c:333
  • 7 0x0000000001c3b12b in param_pack_rotate (handle=0x7033608) at /home/mberger/src/blender/blender/source/blender/editors/uvedit/uvedit_parametrizer.c:4498
  • 8 0x0000000001c3b23f in param_pack (handle=0x7033608, margin=0.00100000005, do_rotate=true) at /home/mberger/src/blender/blender/source/blender/editors/uvedit/uvedit_parametrizer.c:4531
  • 9 0x0000000001c1e8ee in pack_islands_exec (C=0x53421a8, op=0x7022dd8) at /home/mberger/src/blender/blender/source/blender/editors/uvedit/uvedit_unwrap_ops.c:731
  • 10 0x00000000019b6d8f in wm_operator_invoke (C=0x53421a8, ot=0x56f1ef8, event=0x704d288, properties=0x6bf3248, reports=0x0, poll_only=false) at /home/mberger/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:1006
  • 11 0x00000000019b818e in wm_handler_operator_call (C=0x53421a8, handlers=0x6fc7af0, handler=0x58dd788, event=0x704d288, properties=0x6bf3248) at /home/mberger/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:1568
  • 12 0x00000000019b8a2b in wm_handlers_do_intern (C=0x53421a8, event=0x704d288, handlers=0x6fc7af0) at /home/mberger/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:1836
  • 13 0x00000000019b8db8 in wm_handlers_do (C=0x53421a8, event=0x704d288, handlers=0x6fc7af0) at /home/mberger/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:1947
  • 14 0x00000000019b9a7e in wm_event_do_handlers (C=0x53421a8) at /home/mberger/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:2239
  • 15 0x00000000019afadb in WM_main (C=0x53421a8) at /home/mberger/src/blender/blender/source/blender/windowmanager/intern/wm.c:459
    #16 0x00000000019aedd0 in main (argc=2, argv=0x7fffffffdbd8) at /home/mberger/src/blender/blender/source/creator/creator.c:1728

I can reproduce the bug. ``` (gdb) bt ``` - 0 0x00007ffff3223f77 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56 - 1 0x00007ffff32275e8 in __GI_abort () at abort.c:90 - 2 0x00007ffff32614fb in __libc_message (do_abort=do_abort@entry=2, fmt=fmt@entry=0x7ffff3375240 "***Error in `%s': %s: 0x%s***\n") at ../sysdeps/unix/sysv/linux/libc_fatal.c:199 - 3 0x00007ffff326d996 in malloc_printerr (ptr=0x6e64500, str=0x7ffff33753e0 "free(): invalid next size (fast)", action=3) at malloc.c:4923 - 4 _int_free (av=<optimized out>, p=0x6e644f0, have_lock=0) at malloc.c:3779 - 5 0x000000000286920e in MEM_lockfree_freeN (vmemh=0x6e64508) at /home/mberger/src/blender/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:132 - 6 0x0000000002659f6f in BLI_convexhull_aabb_fit_points_2d (points=0x6c1f3a8, n=4) at /home/mberger/src/blender/blender/source/blender/blenlib/intern/convexhull2d.c:333 - 7 0x0000000001c3b12b in param_pack_rotate (handle=0x7033608) at /home/mberger/src/blender/blender/source/blender/editors/uvedit/uvedit_parametrizer.c:4498 - 8 0x0000000001c3b23f in param_pack (handle=0x7033608, margin=0.00100000005, do_rotate=true) at /home/mberger/src/blender/blender/source/blender/editors/uvedit/uvedit_parametrizer.c:4531 - 9 0x0000000001c1e8ee in pack_islands_exec (C=0x53421a8, op=0x7022dd8) at /home/mberger/src/blender/blender/source/blender/editors/uvedit/uvedit_unwrap_ops.c:731 - 10 0x00000000019b6d8f in wm_operator_invoke (C=0x53421a8, ot=0x56f1ef8, event=0x704d288, properties=0x6bf3248, reports=0x0, poll_only=false) at /home/mberger/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:1006 - 11 0x00000000019b818e in wm_handler_operator_call (C=0x53421a8, handlers=0x6fc7af0, handler=0x58dd788, event=0x704d288, properties=0x6bf3248) at /home/mberger/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:1568 - 12 0x00000000019b8a2b in wm_handlers_do_intern (C=0x53421a8, event=0x704d288, handlers=0x6fc7af0) at /home/mberger/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:1836 - 13 0x00000000019b8db8 in wm_handlers_do (C=0x53421a8, event=0x704d288, handlers=0x6fc7af0) at /home/mberger/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:1947 - 14 0x00000000019b9a7e in wm_event_do_handlers (C=0x53421a8) at /home/mberger/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:2239 - 15 0x00000000019afadb in WM_main (C=0x53421a8) at /home/mberger/src/blender/blender/source/blender/windowmanager/intern/wm.c:459 #16 0x00000000019aedd0 in main (argc=2, argv=0x7fffffffdbd8) at /home/mberger/src/blender/blender/source/creator/creator.c:1728 ``` ```

This issue was referenced by blender/blender-addons-contrib@4da651c8f0

This issue was referenced by blender/blender-addons-contrib@4da651c8f0ffc3b0cc21752cbcaed5e10f228a86

This issue was referenced by 4da651c8f0

This issue was referenced by 4da651c8f0ffc3b0cc21752cbcaed5e10f228a86

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4da651c8f0.

Closed by commit 4da651c8f0.

Thank you!

Thank you!
Campbell Barton was assigned by Brecht Van Lommel 2013-11-25 17:58:37 +01:00

Added subscriber: @xrotors

Added subscriber: @xrotors
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37472
No description provided.