Fix T37472: crash when packing UV islands.